lib_LTLIBRARIES=libktx.la
libktx_la_SOURCES=checkheader.c errstr.c etcdec.cxx etcunpack.cxx hashtable.c ktxfilestream.c ktxmemstream.c loader.c swap.c writer.c
libktx_la_CFLAGS=@USEDGL_CFLAGS@ @KTX_CFLAGS@ @GLEW_CFLAGS@ -I@BUILD_ROOT@/include @GLCORE_CFLAGS@
libktx_la_CXXFLAGS=@USEDGL_CFLAGS@ @KTX_CFLAGS@ @GLEW_CFLAGS@ -I@BUILD_ROOT@/include @GLCORE_CFLAGS@
libktx_la_LDFLAGS=@USEDGL_LDFLAGS@ @GLEW_LDFLAGS@ @GLCORE_LDFLAGS@
libktx_la_LIBADD=@GLCORE_LIBS@
